--- a/po/fr.po
+++ b/po/fr.po
@@ -3,21 +3,21 @@
 # This file is distributed under the same license as the Audacious Plugins package.
 #
 # Translators:
-# French language coordinator <french.coordinator@rbox.me>, 2012-2013
-# French language coordinator <french.coordinator@rbox.me>, 2017-2018
-# French language coordinator <french.coordinator@rbox.me>, 2016
+# AO <ao@localizationlab.org>, 2012-2013
+# AO <ao@localizationlab.org>, 2017-2018
+# AO <ao@localizationlab.org>, 2016
 # Oxayotl <jagw40k@free.fr>, 2013-2014
 # Oxayotl <jagw40k@free.fr>, 2011-2012
 # Jean-Alexandre Anglès d'Auriac <jagw40k@free.fr>, 2011
-# French language coordinator <french.coordinator@rbox.me>, 2015
-# French language coordinator <french.coordinator@rbox.me>, 2013-2015
+# AO <ao@localizationlab.org>, 2015
+# AO <ao@localizationlab.org>, 2013-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: https://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2018-08-04 20:48+0200\n"
-"PO-Revision-Date: 2018-07-30 13:42+0000\n"
-"Last-Translator: French language coordinator <french.coordinator@rbox.me>\n"
+"POT-Creation-Date: 2018-08-04 20:51+0200\n"
+"PO-Revision-Date: 2018-12-26 06:11+0000\n"
+"Last-Translator: AO <ao@localizationlab.org>\n"
 "Language-Team: French (http://www.transifex.com/audacious/audacious/language/"
 "fr/)\n"
 "Language: fr\n"
@@ -343,7 +343,7 @@ msgid ""
 "code served as a reference when the ALSA manual was not enough."
 msgstr ""
 "Greffon de sortie ALSA pour Audacious\n"
-"Tous droits réservés © 2009-2012 John Lindgren\n"
+"Tous droits réservés © 2009 à 2012 John Lindgren\n"
 "\n"
 "Mes remerciements à Wiliam Pitcock, auteur du greffon de sortie ALSA NG, "
 "dont le code a servi de référence quand la documentation d’ALSA n’était pas "
@@ -859,7 +859,7 @@ msgid ""
 "\n"
 "This was a Google Summer of Code 2007 project."
 msgstr ""
-"Tous droits réservés © 2007-2012 Calin Crisan <ccrisan@gmail.com> et "
+"Tous droits réservés © 2007 à 2012 Calin Crisan <ccrisan@gmail.com> et "
 "autres.\n"
 "\n"
 "Un grand merci aux développeurs de libcdio <http://www.gnu.org/software/"
@@ -1017,7 +1017,7 @@ msgid ""
 "Copyright 2010-2014 John Lindgren"
 msgstr ""
 "Greffon de compression d’étendue dynamique pour Audacious\n"
-"Tous droits réservés © 2010-2014 John Lindgren"
+"Tous droits réservés © 2010 à 2014 John Lindgren"
 
 #: src/compressor/compressor.cc:64
 msgid "Dynamic Range Compressor"
@@ -1120,7 +1120,7 @@ msgid ""
 "Copyright 2010-2014 John Lindgren"
 msgstr ""
 "Greffon de fondu enchaîné pour Audacious\n"
-"Tous droits réservés © 2010-2014 John Lindgren"
+"Tous droits réservés © 2010 à 2014 John Lindgren"
 
 #: src/crossfade/crossfade.cc:47
 msgid "<b>Crossfade</b>"
@@ -1605,7 +1605,7 @@ msgid ""
 "Copyright 2009-2012 John Lindgren"
 msgstr ""
 "Greffon GIO pour Audacious\n"
-"Tous droits réservés © 2009-2012 John Lindgren"
+"Tous droits réservés © 2009 à 2012 John Lindgren"
 
 #: src/gio/gio.cc:42
 msgid "GIO Plugin"
@@ -2346,11 +2346,12 @@ msgstr ""
 "Contrôler le lecteur avec des combinaisons globales de touches ou des "
 "touches multimédia\n"
 "\n"
-"Tous droits réservés © 2007-2008 Sascha Hlusiak <contact@saschahlusiak.de>\n"
+"Tous droits réservés © 2007 à 2008 Sascha Hlusiak <contact@saschahlusiak."
+"de>\n"
 "\n"
 "Parmi les contributeurs :\n"
-"Tous droits réservés © 2006-2007 Vladimir Paskov <vlado.paskov@gmail.com>\n"
-"Tous droits réservés © 2000-2002 Ville Syrjälä <syrjala@sci.fi>,\n"
+"Tous droits réservés © 2006 à 2007 Vladimir Paskov <vlado.paskov@gmail.com>\n"
+"Tous droits réservés © 2000 à 2002 Ville Syrjälä <syrjala@sci.fi>,\n"
 " Bryn Davies <curious@ihug.com.au>,\n"
 " Jonathan A. Davis <davis@jdhouse.org>,\n"
 " Jeremy Tan <nsx@nsx.homeip.net>"
@@ -2580,7 +2581,7 @@ msgid ""
 "Copyright 2011-2012 John Lindgren and Michał Lipski"
 msgstr ""
 "Greffon de mélange des canaux pour Audacious\n"
-"Tous droits réservés © 2011-2012 John Lindgren et Michał Lipski"
+"Tous droits réservés © 2011 à 2012 John Lindgren et Michał Lipski"
 
 #: src/mixer/mixer.cc:231
 msgid "<b>Channel Mixer</b>"
@@ -2780,7 +2781,7 @@ msgid ""
 msgstr ""
 "Greffon de notifications de bureau pour Audacious\n"
 "Tous droits réservés © 2010 Maximilian Bogner\n"
-"Tous droits réservés © 2011-2013 John Lindgren et Jean-Alexandre Anglès "
+"Tous droits réservés © 2011 à 2013 John Lindgren et Jean-Alexandre Anglès "
 "d’Auriac\n"
 "\n"
 "Ce greffon est un logiciel libre; vous pouvez le redistribuer ou le modifier "
@@ -2853,7 +2854,7 @@ msgid ""
 "Lindgren and of course the authors of the previous OSS plugin."
 msgstr ""
 "Greffon de sortie OSS4 pour Audacious\n"
-"Tous droits réservés © 2010-2012 Michał Lipski\n"
+"Tous droits réservés © 2010 à 2012 Michał Lipski\n"
 "\n"
 "Je souhaiterais remercier les gens présent sur #audacious, particulièrement "
 "Tony Vroon and John Lindgren, et bien entendu les auteurs du précédent "
@@ -2960,8 +2961,8 @@ msgstr ""
 "Tous droits réservés © 2014 William Pitcock\n"
 "\n"
 "Fondé sur le greffon XMMS :\n"
-"Tous droits réservés © 1998-2000 Peter Alm, Mikael Alm, Olle Hallnas, Thomas "
-"Nilsson, et 4Front Technologies\n"
+"Tous droits réservés © 1998 à 2000 Peter Alm, Mikael Alm, Olle Hallnas, "
+"Thomas Nilsson, et 4Front Technologies\n"
 "\n"
 "Licence : GPLv2+"
 
@@ -3039,7 +3040,7 @@ msgid ""
 "Copyright 2010-2012 John Lindgren"
 msgstr ""
 "Greffon de convertisseur de fréquence d’échantillonnage pour Audacious\n"
-"Tous droits réservés © 2010-2012 John Lindgren"
+"Tous droits réservés © 2010 à 2012 John Lindgren"
 
 #: src/resample/resample.cc:187
 msgid "Skip/repeat samples"
@@ -3189,8 +3190,8 @@ msgid ""
 msgstr ""
 "Greffon Scrobbler 2.0 pour Audacious par Pitxyoki,\n"
 "\n"
-"Tous droits réservés © 2012-2013 Luís M. Picciochi Oliveira <Pitxyoki@Gmail."
-"com>\n"
+"Tous droits réservés © 2012 à 2013 Luís M. Picciochi Oliveira "
+"<Pitxyoki@Gmail.com>\n"
 "\n"
 "Remerciements à John Lindgren pour m’avoir donné un coup de main au début de "
 "ce projet.\n"
@@ -4212,7 +4213,7 @@ msgstr ""
 "Tous droits réservés © 2013 Michał Lipski\n"
 "\n"
 "Fondé sur le greffon de conversion de la fréquence d’échantillonnage :\n"
-"Tous droits réservés © 2010-2012 John Lindgren"
+"Tous droits réservés © 2010 à 2012 John Lindgren"
 
 #: src/soxr/sox-resampler.cc:163
 msgid "Quick"
@@ -4299,7 +4300,7 @@ msgid ""
 msgstr ""
 "Greffon d’icône d’état (port partiel pour l’interface Qt)\n"
 "\n"
-"Tous droits réservés © 2005-2007 Giacomo Lozito <james@develia.org>\n"
+"Tous droits réservés © 2005 à 2007 Giacomo Lozito <james@develia.org>\n"
 "Tous droits réservés © 2010 Michał Lipski <tallica@o2.pl>\n"
 "Tous droits réservés © 2015 Eugene Paskevich <eugene@raptor.kiev.ua>\n"
 "\n"
@@ -4350,7 +4351,7 @@ msgid ""
 msgstr ""
 "Greffon d’icône d’état\n"
 "\n"
-"Tous droits réservés © 2005-2007 Giacomo Lozito <james@develia.org>\n"
+"Tous droits réservés © 2005 à 2007 Giacomo Lozito <james@develia.org>\n"
 "Tous droits réservés © 2010 Michał Lipski <tallica@o2.pl>\n"
 "\n"
 "Ce greffon ajoute une icône d’état dans la zone\n"
@@ -4564,4 +4565,5 @@ msgstr "Listes de lecture XSPF"
 #~ "Greffon de prise en charge des raccourcis de GNOME\n"
 #~ "Vous permet de contrôler le lecteur avec les raccourcis de GNOME\n"
 #~ "\n"
-#~ "Tous droits réservés © 2007-2008 Sascha Hlusiak <contact@saschahlusiak.de>"
+#~ "Tous droits réservés © 2007 à 2008 Sascha Hlusiak <contact@saschahlusiak."
+#~ "de>"
