--- a/po/id_ID.po
+++ b/po/id_ID.po
@@ -11,6 +11,7 @@
 # Bervianto Leo Pratama <bervianto.leo@gmail.com>, 2016
 #  <bu0ncu3@yahoo.com>, 2012
 # Catur Susetyo <satyafree@gmail.com>, 2013
+# IMAM MUJAHIDIN <amangimam@hotmail.com>, 2018
 #  <kokabiel9@gmail.com>, 2012
 # Liffindra Angga Zaaldian <findrakecil@gmail.com>, 2015
 # martadinata666 <martadinata666@gmail.com>, 2012
@@ -25,9 +26,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: https://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2018-08-04 20:48+0200\n"
-"PO-Revision-Date: 2018-07-29 21:54+0000\n"
-"Last-Translator: Thomas Lange\n"
+"POT-Creation-Date: 2018-08-04 20:51+0200\n"
+"PO-Revision-Date: 2018-12-26 06:11+0000\n"
+"Last-Translator: IMAM MUJAHIDIN <amangimam@hotmail.com>\n"
 "Language-Team: Indonesian (Indonesia) (http://www.transifex.com/audacious/"
 "audacious/language/id_ID/)\n"
 "Language: id_ID\n"
@@ -1085,31 +1086,31 @@ msgstr "Hapus Berkas"
 
 #: src/delete-files/delete-files.cc:120
 msgid "No files are selected."
-msgstr ""
+msgstr "Tidak ada berkas yang dipilih"
 
 #: src/delete-files/delete-files.cc:125
 #, c-format
 msgid "Do you want to move %s to the trash?"
-msgstr ""
+msgstr "Anda ingin memindahkan %sberkas ke keranjang sampah?"
 
 #: src/delete-files/delete-files.cc:126
 #, c-format
 msgid "Do you want to permanently delete %s?"
-msgstr ""
+msgstr "Anda ingin menghapus %sberkas secara permanen?"
 
 #: src/delete-files/delete-files.cc:133
 #, c-format
 msgid "Do you want to move %d files to the trash?"
-msgstr ""
+msgstr "Anda ingin memindahkan %dberkas ke tempat sampah?"
 
 #: src/delete-files/delete-files.cc:134
 #, c-format
 msgid "Do you want to permanently delete %d files?"
-msgstr ""
+msgstr "Anda ingin menghapus %dberkas secara permanen?"
 
 #: src/delete-files/delete-files.cc:146
 msgid "Move to trash"
-msgstr ""
+msgstr "Pindahkan ke keranjang sampah"
 
 #: src/delete-files/delete-files.cc:146
 msgid "Delete"
